--- a/student-interface/clubs-events.css
+++ b/student-interface/clubs-events.css
@@ -271,7 +271,7 @@ a{
     top: 0;
     left: 0;
 }
-.event-card .event-date{
+.event-card .date-to-style{
     background-color: rgb(51, 46, 46);
     color: var(--yellow-color);
     position: absolute;
@@ -281,7 +281,7 @@ a{
     flex-direction: column;
     padding: 5px 10px;
 }
-.event-date span{
+.date-to-style span{
     font-size: 15px;
 }
 .info-list{
@@ -317,6 +317,66 @@ a{
   
 
  /*End Events Style*/
+
+ /*Start My List Style*/
+ .header-my-list{
+    text-align: center;
+    padding: 10px;
+    margin-top: 5px;
+ }
+ .table-container{
+    display: flex;
+    justify-content: center;
+    min-height: 60vh;
+    position: relative;
+    top: 0;
+ }
+
+ table{
+    width: 95%;
+    border-spacing: 0;
+    border-bottom: solid 1px var(--dark-color);
+ }
+ table thead tr td{
+    border-bottom: solid 1px var(--dark-color);
+    font-size: .6rem;
+    font-weight: 500;
+    padding: 10px 0;
+    text-align: center;
+ }
+ table thead tr td:first-child{
+    width: 20%;
+    text-align: start !important;
+    padding-left: 0;
+}
+ table tbody tr:not(:last-child){
+    border-bottom: solid 1px var(--grey-color);
+ }
+ table tbody tr td{
+    padding: 15px 0;
+    font-size: .6rem;
+    text-align: center;
+ }
+ table tbody tr td:first-child{
+    text-align: start !important;
+    padding-left: 0;
+}
+ table tbody tr td img{
+    width: 70px;
+}
+.smaller-more-info-btn{
+    padding: 5px 10px !important;
+    font-size: .5rem !important;
+}
+.fa-trash{
+    color: var(--dark-color);
+    cursor: pointer;
+    transition: .3s ease;
+}
+.fa-trash:hover{
+    color: var(--yellow-color);
+}
+ /*End My List Style*/
 
 @media screen and (min-width: 1316px){
     .cards-section{
@@ -359,6 +419,36 @@ a{
      .to-date-div{
         gap: 10px;
      }
+    
+     table{
+        width: 75%;
+        border-spacing: 0;
+        border-bottom: solid 1px var(--dark-color);
+     }
+     .table-container{
+        min-height: 68vh;
+     }
+     table thead tr td{
+        font-size: .9rem;
+     }
+     table thead tr td:first-child{
+        width: 40%;
+        padding-left: 30px;
+    }
+    
+     table tbody tr td{
+        font-size: 1rem;
+     }
+     table tbody tr td:first-child{
+        padding-left: 30px;
+    }
+     table tbody tr td img{
+        width: 220px;
+    }
+    .smaller-more-info-btn{
+        padding: 7px 20px !important;
+        font-size: .8rem !important;
+    }
 }
 @media screen and (min-width: 996px) and (max-width: 1315px){
     .cards-section{
@@ -396,6 +486,35 @@ a{
      .to-date-div{
         gap: 10px;
      }
+     .table-container{
+        min-height: 68vh;
+     }
+     table{
+        width: 90%;
+        border-spacing: 0;
+        border-bottom: solid 1px var(--dark-color);
+     }
+     table thead tr td{
+        font-size: .9rem;
+     }
+     table thead tr td:first-child{
+        width: 40%;
+        padding-left: 30px;
+    }
+    
+     table tbody tr td{
+        font-size: 1rem;
+     }
+     table tbody tr td:first-child{
+        padding-left: 30px;
+    }
+     table tbody tr td img{
+        width: 160px;
+    }
+    .smaller-more-info-btn{
+        padding: 7px 20px !important;
+        font-size: .8rem !important;
+    }
      
 }
 @media screen and (min-width: 768px) and (max-width: 995px){
@@ -433,6 +552,35 @@ a{
      .to-date-div{
         gap: 10px;
      }
+     .table-container{
+        min-height: 68vh;
+     }
+     table{
+        width: 90%;
+        border-spacing: 0;
+        border-bottom: solid 1px var(--dark-color);
+     }
+     table thead tr td{
+        font-size: .8rem;
+     }
+     table thead tr td:first-child{
+        width: 25%;
+        padding-left: 0;
+    }
+    
+     table tbody tr td{
+        font-size: .9rem;
+     }
+     table tbody tr td:first-child{
+        padding-left: 0;
+    }
+     table tbody tr td img{
+        width: 150px;
+    }
+    .smaller-more-info-btn{
+        padding: 10px 20px !important;
+        font-size: .8rem !important;
+    }
     
 }
 @media screen and (min-width: 506px) and (max-width: 767px){
@@ -447,6 +595,32 @@ a{
         width: 35rem;
         height: 900px;
      }
+     table{
+        width: 95%;
+        border-spacing: 0;
+        border-bottom: solid 1px var(--dark-color);
+     }
+     table thead tr td{
+        font-size: .7rem;
+     }
+     table thead tr td:first-child{
+        width: 20%;
+        padding-left: 0;
+    }
+    
+     table tbody tr td{
+        font-size: .8rem;
+     }
+     table tbody tr td:first-child{
+        padding-left: 0;
+    }
+     table tbody tr td img{
+        width: 80px;
+    }
+    .smaller-more-info-btn{
+        padding: 7px 15px !important;
+        font-size: .5rem !important;
+    }
     
    
 }
