--- a/student-interface/clubs-events.css
+++ b/student-interface/clubs-events.css
@@ -323,6 +323,10 @@ a{
     text-align: center;
     padding: 10px;
     margin-top: 5px;
+    
+    position: relative;
+    top: 0;
+    left: 0;
  }
  .table-container{
     display: flex;
@@ -377,6 +381,16 @@ a{
 .fa-trash:hover{
     color: var(--yellow-color);
 }
+.successful-message{
+    background-color: green;
+    color: var(--ligh-color);
+    position: absolute;
+    right: 10px;
+    top: 0;
+    padding: 10px;
+    font-size: .7rem;
+    display: none;
+  }
  /*End My List Style*/
 
 @media screen and (min-width: 1316px){
@@ -452,6 +466,9 @@ a{
         padding: 7px 20px !important;
         font-size: .8rem !important;
     }
+    .successful-message{
+        background-color: green;
+      }
 }
 @media screen and (min-width: 996px) and (max-width: 1315px){
     .cards-section{
