--- a/club-manager-interface/manager.css
+++ b/club-manager-interface/manager.css
@@ -12,7 +12,6 @@ body{
     font-family: "Roboto", sans-serif;
 }
 .image-wrapper{
-    background-image: url('https://cdn.uskudar.edu.tr/uploads/images/2017/07/17/800/blob_1.');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -23,6 +22,12 @@ body{
     position: relative;
     top: 0;
     left: 0;
+}
+.bg-image-post{
+    background-image: url('https://ankahaber.net/public/upload/Haber/144054/144054.jpeg');
+}
+.bg-image-activity{
+    background-image: url('https://cdn.uskudar.edu.tr/uploads/images/2017/07/17/800/blob_1.');
 }
 
 .image-wrapper .filter-bg{
@@ -113,38 +118,84 @@ form .input-wrapper select{
     margin-top: 5px;
     align-self: center;
 }
+.image-error,.phone-error,.description-error{
+   text-align: center;
+   margin-top: 5px;
+   color: red;
+   font-weight: bold;
+   font-size: 1.2rem;
+   display: none;
+}
+.phone-error,.description-error{
+    text-align: start !important;
+}
 .description-container{
-    margin-bottom: 40px;
+    margin-bottom: 20px;
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
 }
 .description-container textarea{
     resize: none;
     padding: 10px;
     outline: none;
     border: solid 1px grey;
+    width: 42vw;
+    min-height: 25vh;
 }
 .description-container textarea:focus{
     border: solid 2px var(--yellow-color);
 }
-.send-request-btn,.yes-btn,.no-btn{
-    align-self: flex-end;
+.send-request-btn{
+    align-self: flex-start;
     padding: 10px 60px;
     border: solid 1px transparent;
     background-color: var(--red-color);
     color: var(--section-color);
     transition: .3s ease;
 }
-.yes-btn,.no-btn{
-    padding: 5px 30px !important;
-}
-.no-btn{
-    color: var(--red-color) !important;
-    background-color: transparent !important;
-    border: solid 1px var(--red-color) !important;
-}
-.send-request-btn:hover,.yes-btn:hover{
+.send-request-btn:hover{
     color: var(--red-color);
     background-color: transparent;
     border: solid 1px var(--red-color);
+}
+
+@media screen and (max-width: 750px){
+    form .input-wrapper input{
+       width: 45vw;
+    }
+    .image-upload-container{
+        width: 70vw;
+    }
+    .custom-file-upload {
+        font-size: 2rem;
+    }
+    .description-container textarea{
+        width: 75vw;
+    }
+}
+@media screen and (max-width: 536px){
+    form .input-wrapper input{
+       width: 90vw;
+    }
+    .image-upload-container{
+        width: 90vw;
+    }
+    .custom-file-upload {
+        font-size: 2rem;
+    }
+    .description-container textarea{
+        width: 90vw;
+    }
+    form .input-wrapper select{
+        width: 90vw;
+    }
+    .set-top{
+        margin-top: 20px;
+    }
+    .send-request-btn{
+        align-self: center;
+    }
+    .image-wrapper h1{
+        font-size: 1.4rem;
+    }
 }
