--- a/css/navbar.css
+++ b/css/navbar.css
@@ -11,6 +11,9 @@
 body{
     font-family: "Roboto", sans-serif;
 }
+a{
+    text-decoration: none;
+}
 /*Start Navbar*/
 
 .navbar{
@@ -26,6 +29,7 @@ body{
 }
 .navbar-nav .nav-link{
     color: var(--ligh-color);
+    
 }
 .navbar-nav .nav-link:hover,
 .navbar-nav .nav-link.active{
@@ -48,10 +52,27 @@ body{
     transition: .3s ease-in-out;
     padding: 5px 20px;
 }
+.create-button{
+    color: var(--ligh-color);
+}
 .logout-btn{
     border: solid 1px transparent;
     background-color: var(--red-color);
     color: var(--section-color);
+    transition: .3s ease;
+}
+
+.activity-post-menu{
+    background-color: var(--dark-color); 
+}
+.dropdown-item{
+    color: var(--ligh-color);
+    padding: 10px 30px;
+    font-size: .9rem;
+}
+.dropdown-item:hover{
+    background-color: rgba(240, 240, 240, 0.139);
+    color: var(--yellow-color);
 }
 
 .btn:focus{
@@ -61,6 +82,9 @@ body{
    color: var(--red-color);
    background-color: transparent;
    border: solid 1px var(--red-color);
+}
+.create-button:hover{
+    color: var(--yellow-color);
 }
 .profile-letter{
     background-color: var(--yellow-color);
@@ -72,9 +96,31 @@ body{
     border-radius: 50%;
     font-size: 1.2rem;
     color: var(--dark-color);
+    cursor: pointer;
 }
 .profile-name h5{
     font-size: 1rem;
+}
+.notifications-container{
+    position: relative;
+    top: 0;
+    left: 0;
+    padding: 3px;
+    margin-top: 3px;
+    cursor: pointer;
+}
+.notifications-container svg{
+    font-size: 1.4rem;
+    color: var(--yellow-color);
+}
+.notifications-container .notif-div{
+    width: 12px;
+    height: 12px;
+    background-color: var(--red-color);
+    border-radius: 50%;
+    position: absolute;
+    top: 0;
+    right: 0;
 }
 /*End Navbar*/
 
