--- a/ClubConnect/static/css/navbar.css
+++ b/ClubConnect/static/css/navbar.css
@@ -47,6 +47,9 @@ a{
     display: flex;
     border-radius: 0;
     margin: 0 20px;
+    position: relative;
+    top: 0;
+    left: 0;
 }
 .main-btn{
     transition: .3s ease-in-out;
@@ -122,6 +125,40 @@ a{
     top: 0;
     right: 0;
 }
+.profile-container{
+    cursor: pointer;
+  }
+  .hidden-logout{
+    display: none;
+  }
+.fa-caret-down{
+    color: var(--yellow-color);
+}
+
+  .logout-menu{
+    background-color: var(--dark-color);
+    position: absolute;
+    right: -25px;
+    bottom: -60px;
+    padding: 7px 0;
+    border-radius: 3px;
+  }
+  .logout-menu li{
+    list-style: none;
+  
+  }
+  .logout-menu li a{
+    text-decoration: none;
+    color: var(--ligh-color);
+    padding: 7px 30px 9.2px 30px;
+    border-radius: 3px;
+  }
+  .logout-menu li a:hover{
+    background-color: rgba(240, 240, 240, 0.139);
+    color: var(--yellow-color);
+  }
+
+
 /*End Navbar*/
 
 /*Start Footer*/
@@ -135,3 +172,23 @@ footer{
     top: 2px;
   }
 /*End Footer*/
+@media screen and (max-width: 993px){
+    .profile-container{
+      display: none;
+    }
+    .fa-caret-down{
+      display: none;
+    }
+    .logout-menu{
+      position: relative;
+      top: 0;
+      right: 0;
+      background-color: var(--red-color);
+    }
+    .logout-menu li a{
+      color: var(--ligh-color);
+    }
+    .hidden-logout{
+      display: block;
+    }
+  }
