--- a/templates/pages/student-interface/homepage.html
+++ b/templates/pages/student-interface/homepage.html
@@ -57,7 +57,7 @@
         <div class="clubs-slider-container">
         <i onclick="scrollPreviousClub()" class="fa-solid fa-less-than"></i>
          <div class="clubs-container">
-            <a href="#"><div class="club-card">
+            <a href="{% url 'clubProfile' %}"><div class="club-card">
                 <div class="rounded-image"><img src="{% static 'images/ping-pong-club.jpg' %}" alt="paddle-pros-club"></div>
                 <h5>Paddle Pros</h5>
             </div></a>
