--- a/templates/pages/student-interface/clubs.html
+++ b/templates/pages/student-interface/clubs.html
@@ -64,7 +64,7 @@
                 <div class="card-body">
                 <h5 class="card-title">Paddle Pros</h5>
                 <p class="card-text text-black-50">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn clubs-btn">Explore Club</a>
+                <a href="{% url 'clubProfile' %}" class="btn clubs-btn">Explore Club</a>
         </div>
       </div>
         <div class="card col-md-4 col-lg-3 club-card card-to-filter text-center pt-2" data-category="art">
