--- a/templates/pages/sks-admin-interface/club-profile.html
+++ b/templates/pages/sks-admin-interface/club-profile.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,500&display=swap" rel="stylesheet">
-    <title>ClubConnect | Create a New Club</title>
+    <title>ClubConnect | Paddle Pros Club</title>
 </head>
 <body>
     <div class="bigger-profile">
@@ -47,6 +47,7 @@
                      Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing
                       software like Aldus PageMaker including versions of Lorem Ipsum.
             </p>
+            <div class="club-category" >Club Category: <span data-category="sport">Sport</span></div>
         </div>
         </div>
         <div class="second-container">
@@ -169,6 +170,7 @@
     <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
     <script src="{% static 'js/all.min.js' %}"></script>
     <script src="{% static 'js/navbar.js' %}"></script>
+    <script src="{% static 'js/admin.js' %}"></script>
 
 </body>
 </html>
