--- a/templates/parts/navbar.html
+++ b/templates/parts/navbar.html
@@ -34,7 +34,7 @@
               </div>
         </ul>
         <div class="reg-buttons flex-column align-items-center gap-4 gap-lg-2 flex-lg-row">
-            <a href="#"><button type="button" class="logout-btn btn">Create New Club</button></a>
+            <a href="{% url 'createNewClub' %}"><button type="button" class="logout-btn btn">Create New Club</button></a>
             
             <a href="#">
               <div class="notifications-container me-2">
