--- a/templates/pages/sks-admin-interface/create-club-form.html
+++ b/templates/pages/sks-admin-interface/create-club-form.html
@@ -70,11 +70,11 @@
                 <option value="art">Art</option>
             </select>
             <div class="area-div">
-            <textarea class="input-field" name="club vison" id="club-vision" placeholder="Club Vision"></textarea>
+            <textarea class="input-field" name="club vison" id="club-vision-input" placeholder="Club Vision"></textarea>
             <strong class="vision-error">The club vision should be between 200-3000 letter</strong>
             </div>
             <div class="area-div">
-            <textarea class="input-field" name="club description" id="club-description" placeholder="Club Description"></textarea>
+            <textarea class="input-field" name="club description" id="club-description-input" placeholder="Club Description"></textarea>
             <strong class="description-error">The club description should be between 300-4000 letter</strong>
             </div>
             <div class="create-club-btn"><button onclick="checkAndConfirm()" type="button">Create New Club</button></div>
