--- a/templates/pages/club-manager-interface/event-activity.html
+++ b/templates/pages/club-manager-interface/event-activity.html
@@ -16,6 +16,15 @@
     <title>ClubConnect | Create An Event Activity</title>
 </head>
 <body id="create">
+    <div onclick="hideConfirmMessage()" class="blur" id="create-activity-blur"></div>
+    <div class="confirm-message" id="activity-confirm-message">
+        <h3>Confirm</h3>
+        <p>Are you sure you want to create a new club?</p>
+        <div class="yes-no-buttons">
+            <button onclick="hideConfirmMessage()" class="no-btn" type="button">No</button>
+            <button class="yes-btn" type="button">Yes</button>
+        </div>
+    </div>
    
       <div class="image-wrapper bg-image-activity">
         <div class="filter-bg"></div>
@@ -31,27 +40,32 @@
       <form action="" method="post">
         <div class="input-container justify-content-lg-between gap-lg-0 gap-4">
             <div class="input-wrapper">
-                <label for="f-name">First Name:</label>
-            <input type="text" name="firstname" id="f-name" placeholder="e.g Nouhad">
+                <label for="a-cm-name">Club Manager Name:</label>
+            <input class="input-field" type="text" name="club manager name" id="a-cm-name" placeholder="e.g Nouhad El Hallab">
             </div>
             <div class="input-wrapper">
-                <label for="l-name">Last Name:</label>
-            <input type="text" name="firstname" id="l-name" placeholder="e.g Elhallab">
+                <label for="a-cvm-name">Club Vice Manager Name:</label>
+            <input class="input-field" type="text" name="club vice manager name" id="a-cvm-name" placeholder="e.g Mohammad Aburahma">
             </div>
             <div class="input-wrapper">
-                <label for="c-name">Club Name:</label>
-            <input type="text" name="clubname" id="c-name" placeholder="e.g Paddle Pros">
+                <label for="a-c-name">Club Name:</label>
+            <input class="input-field" type="text" name="clubname" id="a-c-name" placeholder="e.g Paddle Pros">
             </div>
         </div>
 
-        <div class="input-container">
+        <div class="input-container justify-content-lg-between gap-lg-0 gap-4">
             <div class="input-wrapper">
-                <label for="e-title">Event Title:</label>
-            <input type="text" name="event-title" id="e-title" placeholder="Event Title">
+                <label for="a-e-email">Email:</label>
+            <input class="input-field event-email-input" type="email" name="event-email" id="a-e-email" placeholder="Email">
+            <strong class="email-error">Invalid Email</strong>
+            </div>
+            <div class="input-wrapper">
+                <label for="a-e-title">Event Title:</label>
+            <input class="input-field event-title-input" type="text" name="event-title" id="a-e-title" placeholder="Event Title">
             </div>
             <div class="input-wrapper set-top">
-                <label for="s-categories">Select a category:</label>
-            <select name="categories" id="s-categories">
+                <label for="a-s-categories">Select a category:</label>
+            <select class="event-category-input" name="categories" id="a-s-categories">
                 <option value="sport">Sport</option>
                 <option value="gaming">Gaming</option>
                 <option value="technology">Technology</option>
@@ -63,12 +77,12 @@
         </div>
         <h6>Event Activity Image:</h6>
         <div class="image-upload-container">
-            <label for="file-upload" class="custom-file-upload">
+            <label for="a-file-upload" class="custom-file-upload">
             <i class="fas fa-cloud-upload-alt"></i> Choose File
         </label>
-        <input id="file-upload" type="file" onchange="displayFiles(this)" multiple />
+        <input class="event-file-upload-input" id="a-file-upload" type="file" onchange="displayFiles(this)" multiple />
         </div>
-        <div id="file-list"></div>
+        <div class="event-file-list" id="a-file-list"></div>
         <strong class="image-error">You should set an image for your event</strong>
 
         <div class="alert alert-warning m-2" role="alert">
@@ -77,29 +91,29 @@
           </div>
         <div class="input-container justify-content-lg-between gap-lg-0 gap-4 mt-5">
             <div class="input-wrapper">
-                <label for="e-date">Event Date:</label>
-            <input type="date" name="date" id="e-date">
+                <label for="a-e-date">Event Date:</label>
+            <input class="input-field" type="date" name="date" id="a-e-date">
             </div>
             <div class="input-wrapper">
-                <label for="e-time">Event Time:</label>
-            <input type="time" name="time" id="e-time">
+                <label for="a-e-time">Event Time:</label>
+            <input class="input-field" type="time" name="time" id="a-e-time">
             </div>
             <div class="input-wrapper">
-                <label for="e-location">Location:</label>
-            <input type="text" name="location" id="e-location" placeholder="e.g Uskudar Univer...">
+                <label for="a-e-location">Location:</label>
+            <input class="input-field" type="text" name="location" id="a-e-location" placeholder="e.g Uskudar Univer...">
             </div>
             <div class="input-wrapper mt-lg-4">
-                <label for="p-number">Phone Number:</label>
-            <input type="text" name="phone number" id="p-number" placeholder="e.g +90 (512) 345 678 9">
+                <label for="a-p-number">Phone Number:</label>
+            <input class="input-field event-phone-input" type="text" name="phone number" id="a-p-number" placeholder="e.g +90 (512) 345 678 9">
             <strong class="phone-error">Invalid Number</strong>
             </div>
         </div>
         <h6>Event Description:</h6>
         <div class="description-container">
-            <textarea name="description" id="e-description" placeholder="e.g The goal of this event..."></textarea>
+            <textarea class="input-field event-description-input" name="description" id="a-e-description" placeholder="e.g The goal of this event..."></textarea>
             <strong class="description-error">The Description should be between 300-4000 letter</strong>
         </div>
-        <button onclick="checkFormValidation()" type="button" class="send-request-btn" data-bs-toggle="modal" data-bs-target="#exampleModal">Submit Request</button>
+        <button onclick="checkEventFormAndConfirm()" type="button" class="send-request-btn" data-bs-toggle="modal" data-bs-target="#exampleModal">Submit Request</button>
       </form>
 
       <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
