--- a/templates/pages/club-manager-interface/event-post.html
+++ b/templates/pages/club-manager-interface/event-post.html
@@ -13,10 +13,19 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,500&display=swap" rel="stylesheet">
-    <title>ClubConnect | Add An Event Post</title>
+    <title>ClubConnect | Create An Event Activity</title>
 </head>
 <body id="create">
-    
+    <div onclick="hideConfirmMessage()" class="blur" id="create-activity-blur"></div>
+    <div class="confirm-message" id="activity-confirm-message">
+        <h3>Confirm</h3>
+        <p>Are you sure you want to create a new club?</p>
+        <div class="yes-no-buttons">
+            <button onclick="hideConfirmMessage()" class="no-btn" type="button">No</button>
+            <button class="yes-btn" type="button">Yes</button>
+        </div>
+    </div>
+   
       <div class="image-wrapper bg-image-post">
         <div class="filter-bg"></div>
         <h1>Add An Event Post</h1>
@@ -31,75 +40,50 @@
       <form action="" method="post">
         <div class="input-container justify-content-lg-between gap-lg-0 gap-4">
             <div class="input-wrapper">
-                <label for="f-name">First Name:</label>
-            <input type="text" name="firstname" id="f-name" placeholder="e.g Nouhad">
+                <label for="p-cm-name">Club Manager Name:</label>
+            <input class="input-field" type="text" name="club manager name" id="p-cm-name" placeholder="e.g Nouhad El Hallab">
             </div>
             <div class="input-wrapper">
-                <label for="l-name">Last Name:</label>
-            <input type="text" name="firstname" id="l-name" placeholder="e.g Elhallab">
+                <label for="p-cvm-name">Club Vice Manager Name:</label>
+            <input class="input-field" type="text" name="club vice manager name" id="p-cvm-name" placeholder="e.g Mohammad Aburahma">
             </div>
             <div class="input-wrapper">
-                <label for="c-name">Club Name:</label>
-            <input type="text" name="clubname" id="c-name" placeholder="e.g Paddle Pros">
+                <label for="p-c-name">Club Name:</label>
+            <input class="input-field" type="text" name="clubname" id="p-c-name" placeholder="e.g Paddle Pros">
             </div>
         </div>
-
-        <div class="input-container">
-            <div class="input-wrapper">
-                <label for="e-title">Event Title:</label>
-            <input type="text" name="event-title" id="e-title" placeholder="Event Title">
-            </div>
-            <div class="input-wrapper set-top">
-                <label for="s-categories">Select a category:</label>
-            <select name="categories" id="s-categories">
-                <option value="sport">Sport</option>
-                <option value="gaming">Gaming</option>
-                <option value="technology">Technology</option>
-                <option value="society">Society</option>
-                <option value="programming">Programming</option>
-                <option value="art">Art</option>
-            </select>
-            </div>
-        </div>
-        <h6>Event Activity Image:</h6>
-        <div class="image-upload-container">
-            <label for="file-upload" class="custom-file-upload">
-            <i class="fas fa-cloud-upload-alt"></i> Choose File
-        </label>
-        <input id="file-upload" type="file" onchange="displayFiles(this)" multiple />
         
-        </div>
-        <div id="file-list"></div>
-        <strong class="image-error">You should set an image for your event</strong>
-        <div class="alert alert-warning m-2" role="alert">
-            <i class="fa-solid fa-triangle-exclamation"></i>
-          You can only choose one image to represent your event. Ensure that the selected image effectively encapsulates the essence and theme of your event.
-          </div>
-        <div class="input-container justify-content-lg-between gap-lg-0 gap-4 mt-5">
-            <div class="input-wrapper">
-                <label for="e-date">Event Date:</label>
-            <input type="date" name="date" id="e-date">
-            </div>
-            <div class="input-wrapper">
-                <label for="e-time">Event Time:</label>
-            <input type="time" name="time" id="e-time">
-            </div>
-            <div class="input-wrapper">
-                <label for="e-location">Location:</label>
-            <input type="text" name="location" id="e-location" placeholder="e.g Uskudar Univer...">
-            </div>
-            <div class="input-wrapper mt-lg-4">
-                <label for="p-number">Phone Number:</label>
-            <input type="text" name="phone" id="p-number" placeholder="e.g +90 (512) 345 678 9">
+        <div class="input-container gap-lg-5 gap-4">
+            <div class="input-wrapper me-lg-1">
+                <label for="p-p-number">Phone Number:</label>
+            <input class="input-field event-phone-input" type="text" name="phone number" id="p-p-number" placeholder="e.g +90 (512) 345 678 9">
             <strong class="phone-error">Invalid Number</strong>
             </div>
+            <div class="input-wrapper ms-lg-5">
+                <label for="p-e-title">Event Title:</label>
+            <input class="input-field event-title-input" type="text" name="event-title" id="p-e-title" placeholder="Event Title">
+            </div>
         </div>
-        <h6>Event Description:</h6>
+        <h6>Event Post Image:</h6>
+        <div class="image-upload-container">
+            <label for="p-file-upload" class="custom-file-upload">
+            <i class="fas fa-cloud-upload-alt"></i> Choose File
+        </label>
+        <input id="p-file-upload" type="file" onchange="displayFiles(this)" multiple />
+        </div>
+        <div class="event-file-list" id="p-file-list"></div>
+
+        <div class="alert alert-warning m-2" role="alert">
+            <i class="fa-solid fa-triangle-exclamation"></i>
+          You can only choose one image to represent your event or leave it blank
+          </div>
+        
+        <h6 class="mt-3">Event Description:</h6>
         <div class="description-container">
-            <textarea name="description" id="e-description" placeholder="e.g The goal of this event..."></textarea>
+            <textarea class="input-field event-description-input" name="description" id="p-e-description" placeholder="e.g The goal of this event..."></textarea>
             <strong class="description-error">The Description should be between 300-4000 letter</strong>
         </div>
-        <button onclick="checkFormValidation()" type="button" class="send-request-btn">Submit Request</button>
+        <button onclick="checkEventFormAndConfirm()" type="button" class="send-request-btn" data-bs-toggle="modal" data-bs-target="#exampleModal">Submit Request</button>
       </form>
 
       <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
