--- a/templates/pages/sks-admin-interface/create-club-form.html
+++ b/templates/pages/sks-admin-interface/create-club-form.html
@@ -16,7 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,500&display=swap" rel="stylesheet">
     <title>ClubConnect | Create a New Club</title>
 </head>
-<body>
+<body id="create new club">
     <div onclick="hideConfirmMessage()" class="blur" id="create-club-blur"></div>
     <div class="confirm-message" id="club-confirm-message">
         <h3>Confirm</h3>
