--- a/templates/pages/sks-admin-interface/admin-notifications.html
+++ b/templates/pages/sks-admin-interface/admin-notifications.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,500&display=swap" rel="stylesheet">
     <title>ClubConnect | Notifications | SKS Admin</title>
 </head>
-<body>
+<body id="admin-notifications">
     <div class="notif-header">
         <div class="filter-bg"></div>
         <h1>Notifications</h1>
