--- a/templates/parts/navbar.html
+++ b/templates/parts/navbar.html
@@ -42,7 +42,7 @@
               <div class="notif-div"></div>
               </div>
           </a>
-          <a href="#" id="manager-notifications">
+          <a href="{% url 'managerNotifications' %}" id="manager-notifications">
             <div class="notifications-container me-2">
             <i class="fa-solid fa-bell"></i>
             <div class="notif-div"></div>
