edited create new club form

--- a/templates/pages/sks-admin-interface/admin-notifications.html
+++ b/templates/pages/sks-admin-interface/admin-notifications.html
@@ -174,6 +174,12 @@
     <div class="event-interface-container" id="edited-event-interface-container">
         <!-- HERE THE Old and Edited Event INTERFACE WILL BE DISPLAYED FROM JS  -->
     </div>
+
+    <div class="admin-rejection-purpose">
+        <h3>Please Enter Your Rejection Purpose</h3>
+        <input type="text" name="rejection purpose" id="rej-perp" placeholder="enter your rejection perpose">
+        <button type="button">Submit</button>
+    </div>
 </div>
 
     <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
